# hero

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/experiments/: ablation_study.yaml  solomon_benchmark.yaml
scripts/: analyze_hnsw_failures.py  analyze_results.py  compare_objective_values.py  comprehensive_benchmark.py  debug_method_differences.py  generate_fig3_speedup.py  generate_fig4_pareto.py  generate_figure.sh  generate_figures.py  run_convergence_experiments.py  test_baselines.py  test_diverse_instances.py  test_rebuild_optimizations.py  track_method_divergence.py  visualize_solution.py
src/: __init__.py
src/dynamic/: __init__.py  event_generator.py  handler.py
src/experiments/: __init__.py  analysis.py  run_experiment.py
src/heuristics/: __init__.py  alns.py  constructive.py  destroy.py  ortools_solver.py  repair.py
src/hnsw/: __init__.py  features.py  index.py  manager.py
src/models/: __init__.py  fairness.py  parsers.py  problem.py  solution.py  subsequence.py
